Fixed gradient cutoff in style.css. Implemented simple styling for recipe pages in recipes.css

--- a/style.css
+++ b/style.css
@@ -1,15 +1,9 @@
-html,body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-
 body {
-  text-align: center;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  background-image: linear-gradient(to bottom, antiquewhite, brown);
-  background-repeat: no-repeat;
-  background-size: cover;
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-image: linear-gradient(antiquewhite,white);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .logo{
@@ -30,7 +24,7 @@ body {
 .container img {
     width: 100%;
     height: 100%;
-    border: 5px solid black;
+    border: 5px solid peru;
     border-radius: 35px;
 }
 
